Fix: Sidebar navigation arrow direction when collapsed (#1)

--- a/features/layout/sidebar-navigation/sidebar-navigation.module.scss
+++ b/features/layout/sidebar-navigation/sidebar-navigation.module.scss
@@ -137,5 +137,9 @@
 
   @media (min-width: breakpoint.$desktop) {
     display: flex;
+
+    &.isCollapsed {
+      transform: rotate(180deg);
+    }
   }
 }
